--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,19 @@ html {
 }
 
 body {
+  position: relative;
   margin: 5px 15px;
+  min-height: 100vh;
 }
+
+a {
+  text-decoration: none;
+  color: rgb(77, 77, 77);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+}
+
+/* NAV SECTOIN */
 
 #navbar {
   display: grid;
@@ -59,18 +70,14 @@ body {
   border-radius: 50%;
 }
 
-a {
-  text-decoration: none;
-  color: rgb(77, 77, 77);
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
-}
+/* MAIN SECTOIN */
+
 
 #main {
-  padding-top: 150px;
+  padding-top: 170px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 150px 60px 60px;
+  grid-template-columns: 1fr 580px 1fr;
+  grid-template-rows: 150px 55px 80px;
   grid-template-areas: 
   ". logo ."
   ". search-bar ."
@@ -86,19 +93,101 @@ a {
 
 #search-bar {
   grid-area: search-bar;
-  margin: 10px;
-
+  height: 35px;
+  align-self: center;
+  border-radius: 20px;
+  border-color: rgb(199, 199, 199);
 }
 
 #flexbox {
   display: flexbox;
   grid-area: flexbox;
+  justify-self:center;
+  align-self:center;
+
 }
 
 #google-search-button {
   grid-area: google-search-button;
+  width: 120px;
+  height: 30px;
+  border: none;
+  border-radius: 5px;
+  background-color:rgb(245, 245, 245)
 }
 
 #feeling-lucky {
   grid-area: feeling-lucky;
+  width: 120px;
+  height: 30px;
+  border: none;
+  border-radius: 5px;
+  background-color:rgb(245, 245, 245)
+}
+
+
+
+/* FOOTER SECTOIN */
+
+
+#footer {
+  display: grid;
+  grid-template-columns: repeat(2, 100px) 120px 1fr repeat(3, 70px);
+  grid-template-rows: 50px;
+  grid-area: "footer 1 footer2 footer3 footer4 footer5 footer6 footer7";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
+}
+
+#footer1 {
+  grid-template-areas: footer1;
+  justify-self: center;
+  align-self: center;
+}
+
+
+#footer2 {
+  grid-template-areas: footer2;
+  justify-self: center;
+  align-self: center;
+
+
+}
+#footer3 {
+  grid-template-areas: footer3;
+  justify-self: center;
+  align-self: center;
+
+
+}
+
+#footer4 {
+  grid-template-areas: footer4;
+  justify-self: center;
+  align-self: center;
+
+
+}
+#footer5 {
+  grid-template-areas: footer5;
+  justify-self: center;
+  align-self: center;
+
+
+}
+#footer6 {
+  grid-template-areas: footer6;
+  justify-self: center;
+  align-self: center;
+
+
+}
+#footer7 {
+  grid-template-areas: footer7;
+  justify-self: center;
+  align-self: center;
+
+
 }
